--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Specifics #
+###################
+*.xml
+
 # Compiled source #
 ###################
 *.com
@@ -6,6 +10,7 @@
 *.exe
 *.o
 *.so
+
 
 # Packages #
 ############
